# serde-contract

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: contract.rs  msg.rs
tests/: integration.rs
